--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>coursera test</title>
 
 	<style>
+		
+		#menu{
+			text-align:center;}
+		
 		.container{
 			width: 80%;
 			margin: auto;
@@ -35,12 +41,41 @@
 			float: right;
 			padding: 2px;
 		}
+		
+		@medai screen and (max-width:959){
+			.container{
+				width:100%;
+			}
+			.div_one{
+				width:30%;
+			}
+		
+		}
+		
+		@medai screen and (max-width:640px){
+			#one{
+				width:40%;}
+			#tow{
+				width:40%;}
+		
+		}
+		
+		@medai screen and (max-width:320px){
+			
+			.container{
+				width:320px;
+			}
+			.div_one{
+				width:100%;
+			}
+		}
+
 
 	</style>
 </head>
 <body>
 	<div class="container">
-		<p>our menu</p>
+		<p id='menu'>our menu</p>
 	<div class="div_one">
 		<span id="one">chicken</span>
 		<p>
